Fix acas label sequence button alignment

--- a/modules/ACASLabelSequences/src/client/ACASLabelSequences.css
+++ b/modules/ACASLabelSequences/src/client/ACASLabelSequences.css
@@ -1,4 +1,3 @@
 .bv_acasLabelSequenceForm .form-control{
     width: 335px;
-    margin-left: 20px;
 }
